fix. scrollbar 스타일 디자인 컴포넌트 반영

--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -22,9 +22,13 @@ body {
   scrollbar-width: none; /* Firefox */
   -ms-overflow-style: none; /* Internet Explorer 10+ */
 }
-html::-webkit-scrollbar,
-body::-webkit-scrollbar {
-  display: none; /* Safari and Chrome */
+*::-webkit-scrollbar {
+  width: 4px;
+  height: 4px;
+}
+*::-webkit-scrollbar-thumb {
+  background: #cbd5e1; /* gray300 */
+  border-radius: 999px;
 }
 
 ol,
